--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env.development.local
+.env.staging.local
+.env.production.local
 
 # vercel
 .vercel
