--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scaledtest4",
+  "name": "scaledtest",
   "version": "1.0.0",
   "description": "A Next.js application with Keycloak authentication",
   "main": "index.js",
@@ -8,35 +8,70 @@
     "build": "next build",
     "start": "node scripts/setup-keycloak.js && next start",
     "start:all": "docker-compose -f docker/docker-compose.yml up -d && node scripts/setup-keycloak.js && next start",
+    "setup:keycloak": "node scripts/setup-keycloak.js",
+    "setup:keycloak:cli": "node scripts/setup-keycloak-cli.js",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "test": "jest",
+    "test:unit": "jest --selectProjects Unit",
+    "test:integration": "jest --selectProjects Integration",
+    "test:system": "jest --selectProjects System",
+    "test:all": "jest",
+    "test:ui": "playwright test",
+    "test:ui:setup": "node scripts/setup-keycloak.js && playwright test",
+    "test:ui:full": "docker-compose -f docker/docker-compose.yml up -d && npm run test:ui:setup"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@opensearch-project/opensearch": "^3.5.1",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "axios": "^1.9.0",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "keycloak-js": "^26.2.0",
     "next": "^15.3.2",
     "nodemon": "^3.1.10",
+    "pino": "^8.16.0",
+    "pino-pretty": "^10.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/next": "^8.0.7",
-    "@types/node": "^22.15.14",
+    "@playwright/test": "^1.52.0",
+    "@types/jest": "^29.5.14",
+    "@types/next": "^9.0.0",
+    "@types/node": "^22.15.15",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
+    "@types/wait-on": "^5.3.4",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.26.0",
+    "eslint-config-next": "^15.3.2",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
+    "expect-playwright": "^0.8.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-playwright-preset": "^4.0.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "uuid": "^11.1.0",
+    "wait-on": "^8.0.3"
   }
 }
