Revert "Adding a pull request workflow file"
This reverts commit d3a0361e7b6a3ed65980f12c0d19e64faf35a692.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "test": "jest",
     "test:unit": "jest --selectProjects Unit",
     "test:integration": "jest --selectProjects Integration",
-    "test:system": "jest --selectProjects System"
+    "test:system": "jest --selectProjects System",
+    "test:all": "jest",
+    "test:ui": "playwright test",
+    "test:ui:setup": "node scripts/setup-keycloak.js && playwright test",
+    "test:ui:full": "docker-compose -f docker/docker-compose.yml up -d && npm run test:ui:setup"
   },
   "keywords": [],
   "author": "",
