--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test:all": "jest",
     "test:ui": "playwright test",
     "test:ui:setup": "node scripts/setup-keycloak.js && playwright test",
-    "test:ui:full": "docker-compose -f docker/docker-compose.yml up -d && npm run test:ui:setup"
+    "test:ui:full": "docker-compose -f docker/docker-compose.yml up -d && npm run test:ui:setup",
+    "prepare": "husky",
+    "postinstall": "husky"
   },
   "keywords": [],
   "author": "",
@@ -62,9 +64,11 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "expect-playwright": "^0.8.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-playwright-preset": "^4.0.0",
+    "lint-staged": "^16.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "supertest": "^7.1.0",
@@ -73,5 +77,10 @@
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "wait-on": "^8.0.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
