--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -75,6 +75,9 @@ jobs:
           node-version: 20
           cache: 'npm'
 
+      - name: Install Playwright
+        run: npx playwright install
+
       - name: Install dependencies
         run: npm ci
 
