--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "fix:lineendings": "git add --renormalize .",
+    "fix:lineendings:powershell": "pwsh -File ./scripts/fix-line-endings.ps1",
     "test": "jest",
     "test:ci": "jest --forceExit --detectOpenHandles",
     "test:unit": "jest --selectProjects Unit",
@@ -80,7 +82,7 @@
     "wait-on": "^8.0.3"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,md}": [
+    "*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}": [
       "prettier --write"
     ]
   }
