--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "setup:keycloak:cli": "node scripts/setup-keycloak-cli.js",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
     "fix:lineendings": "git add --renormalize .",
-    "fix:lineendings:powershell": "pwsh -File ./scripts/fix-line-endings.ps1",
     "test": "jest",
     "test:ci": "jest --forceExit --detectOpenHandles",
     "test:unit": "jest --selectProjects Unit",
