--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,8 @@
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "es5",  "bracketSpacing": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
   "arrowParens": "avoid",
   "endOfLine": "lf"
 }
