--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -64,7 +64,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Set up Docker Compose
-        uses: docker/compose-action@v2
+        uses: docker/setup-compose-action@v1
         with:
           version: 'latest'
 
