docker-compose fixes and other minori fixes

--- a/package.json
+++ b/package.json
@@ -7,23 +7,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "node scripts/setup-keycloak.js && next start",
-    "start:all": "docker-compose -f docker/docker-compose.yml up -d && node scripts/setup-keycloak.js && next start",
+    "start:all": "docker compose -f docker/docker-compose.yml up -d && node scripts/setup-keycloak.js && next start",
     "setup:keycloak": "node scripts/setup-keycloak.js",
     "setup:keycloak:cli": "node scripts/setup-keycloak-cli.js",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
-    "fix:lineendings": "git add --renormalize .",
     "test": "jest",
     "test:ci": "jest --forceExit --detectOpenHandles",
     "test:unit": "jest --selectProjects Unit",
     "test:integration": "jest --selectProjects Integration",
     "test:system": "jest --selectProjects System",
-    "test:all": "jest",
-    "test:ui": "playwright test",
-    "test:ui:setup": "node scripts/setup-keycloak.js && playwright test",
-    "test:ui:full": "docker-compose -f docker/docker-compose.yml up -d && npm run test:ui:setup",
     "prepare": "husky",
     "postinstall": "husky"
   },
