--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   lint-and-format:
     runs-on: ubuntu-latest
+    timeout-minutes: 1
     steps:
       - uses: actions/checkout@v4
 
@@ -28,6 +29,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     needs: lint-and-format
+    timeout-minutes: 5
     env:
       # Required Keycloak configuration
       KEYCLOAK_URL: http://localhost:8080
