--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -5,35 +5,13 @@ on:
     branches: [main]
 
 jobs:
-  lint-and-format:
-    runs-on: ubuntu-latest
-    timeout-minutes: 1
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Check code formatting
-        run: npm run format:check
-
-      - name: Lint
-        run: npm run lint
-
   build-and-test:
     runs-on: ubuntu-latest
-    needs: lint-and-format
     timeout-minutes: 5
     env:
       # Required Keycloak configuration
       KEYCLOAK_URL: http://localhost:8080
-      KEYCLOAK_ADMIN_USER: admin
+      KEYCLOAK_ADMIN_USERNAME: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KEYCLOAK_REALM: scaledtest
       KEYCLOAK_REALM_DISPLAY_NAME: ScaledTest CI Realm
