--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ KEYCLOAK_ROLES=readonly,maintainer,owner
 # the corresponding password is required
 
 # User Configuration - Readonly User
-KEYCLOAK_READONLY_USER_USERNAME=readonly-user
+KEYCLOAK_READONLY_USER_USERNAME=readonly@example.com
 KEYCLOAK_READONLY_USER_PASSWORD=password
 KEYCLOAK_READONLY_USER_FIRSTNAME=Read
 KEYCLOAK_READONLY_USER_LASTNAME=Only
@@ -44,7 +44,7 @@ KEYCLOAK_READONLY_USER_EMAIL=readonly@example.com
 KEYCLOAK_READONLY_USER_ROLES=readonly
 
 # User Configuration - Maintainer User
-KEYCLOAK_MAINTAINER_USER_USERNAME=maintainer-user
+KEYCLOAK_MAINTAINER_USER_USERNAME=maintainer@example.com
 KEYCLOAK_MAINTAINER_USER_PASSWORD=password
 KEYCLOAK_MAINTAINER_USER_FIRSTNAME=Maintainer
 KEYCLOAK_MAINTAINER_USER_LASTNAME=User
@@ -52,7 +52,7 @@ KEYCLOAK_MAINTAINER_USER_EMAIL=maintainer@example.com
 KEYCLOAK_MAINTAINER_USER_ROLES=readonly,maintainer
 
 # User Configuration - Owner User
-KEYCLOAK_OWNER_USER_USERNAME=owner-user
+KEYCLOAK_OWNER_USER_USERNAME=owner@example.com
 KEYCLOAK_OWNER_USER_PASSWORD=password
 KEYCLOAK_OWNER_USER_FIRSTNAME=Owner
 KEYCLOAK_OWNER_USER_LASTNAME=User
