--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
-    "dev": "docker compose -f docker/docker-compose.yml up -d && node scripts/setup-keycloak.js && next dev",
+    "dev": "docker compose -f docker/docker-compose.yml up -d && node scripts/setup-keycloak.js && next dev --turbopack",
     "setup:keycloak": "node scripts/setup-keycloak.js",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
