--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "d3": "^7.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "keycloak-js": "^26.2.0",
     "next": "^15.3.2",
