--- a/package.json
+++ b/package.json
@@ -58,13 +58,12 @@
     "eslint-config-next": "^15.3.2",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
-    "expect-playwright": "^0.8.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-playwright-preset": "^4.0.0",
     "lint-staged": "^16.0.0",
     "npm-run-all": "^4.1.5",
+    "playwright": "^1.52.0",
     "prettier": "^3.5.3",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
