--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Next.js application with Keycloak authentication",
   "main": "index.js",
   "scripts": {
-    "build": "next build",
+    "build": "tsc --project tsconfig.tests.json && next build",
     "dev": "docker compose -f docker/docker-compose.yml up -d && node scripts/setup-keycloak.js && next dev --turbopack",
     "setup:keycloak": "node scripts/setup-keycloak.js",
     "update-deps": "npx npm-check-updates -u && npm install",
