Fully ctrf with a script to pass results to the api

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,17 @@ NEXT_PUBLIC_KEYCLOAK_URL=http://localhost:8080
 NEXT_PUBLIC_KEYCLOAK_REALM=scaledtest
 NEXT_PUBLIC_KEYCLOAK_CLIENT_ID=scaledtest-client
 NEXT_PUBLIC_APP_BASE_URL=http://localhost:3000
+
+# CTRF Test Results API Configuration - OPTIONAL
+# API base URL for sending test results (defaults to http://localhost:3000)
+API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3000
+
+# Test user credentials for API authentication - OPTIONAL
+# Used by the send-test-results script to authenticate with the API
+TEST_API_USERNAME=maintainer-user
+TEST_API_PASSWORD=password
+
+# CTRF Report Configuration - OPTIONAL
+# Set to 'true' to automatically clean up the CTRF report file after sending
+CLEANUP_CTRF_REPORT=false
