--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:unit": "jest --selectProjects Unit",
     "test:integration": "jest --selectProjects Integration",
     "test:system": "jest --selectProjects System",
+    "send-test-results": "node scripts/send-test-results.js",
     "generate-ctrf:types": "npx json2ts -i src/schemas/ctrf/ctrf-schema.json -o src/schemas/ctrf/ctrf.ts --inferStringEnumKeysFromValues --enableConstEnums",
     "prepare": "husky",
     "postinstall": "husky && npx playwright install chromium"
@@ -54,6 +55,7 @@
     "eslint-plugin-prettier": "^5.4.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-ctrf-json-reporter": "^0.0.9",
     "jest-environment-node": "^29.7.0",
     "json-schema-to-typescript": "^15.0.4",
     "lint-staged": "^16.1.0",
