--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,6 @@
   "rules": {
     "prettier/prettier": "error",
     "no-console": "error"
-  }
+  },
+  "ignorePatterns": ["node_modules/", ".next/", "out/", "build/"]
 }
