--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pino-pretty": "^13.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^2.15.3",
     "zod": "^3.25.45"
   },
   "devDependencies": {
