--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/wait-on": "^5.3.4",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
+    "axe-playwright": "^2.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
