--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
     "axe-playwright": "^2.1.0",
+    "chalk": "^4.1.2",
     "cross-env": "^7.0.3",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
@@ -57,6 +58,7 @@
     "eslint-plugin-prettier": "^5.4.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-console-group-reporter": "^1.1.1",
     "jest-ctrf-json-reporter": "^0.0.9",
     "jest-environment-node": "^29.7.0",
     "json-schema-to-typescript": "^15.0.4",
