--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest",
     "test:ci": "jest --forceExit --detectOpenHandles",
     "test:unit": "jest --selectProjects Unit",
+    "test:components": "jest --selectProjects Components",
     "test:integration": "jest --selectProjects Integration",
     "test:system": "jest --selectProjects System",
     "send-test-results": "node scripts/send-test-results.js",
@@ -42,6 +43,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.52.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.29",
     "@types/supertest": "^6.0.3",
@@ -56,8 +60,10 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-ctrf-json-reporter": "^0.0.9",
+    "jest-environment-jsdom": "^30.0.0",
     "jest-environment-node": "^29.7.0",
     "json-schema-to-typescript": "^15.0.4",
     "lint-staged": "^16.1.0",
