--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,11 @@
   },
   "overrides": [
     {
-      "files": ["tests/jest-playwright-setup.js", "tests/utils/closeHandles.js"],
+      "files": [
+        "tests/jest-playwright-setup.js",
+        "tests/utils/closeHandles.js",
+        "tests/components/jest-setup.js"
+      ],
       "rules": {
         "@typescript-eslint/no-require-imports": "off",
         "no-console": "off"
