--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,28 @@
         "panel": "new"
       },
       "problemMatcher": []
+    },
+    {
+      "label": "NPM Build",
+      "type": "shell",
+      "command": "npm",
+      "args": ["run", "build"],
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "NPM Test",
+      "type": "shell",
+      "command": "npm",
+      "args": ["run", "test"],
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      },
+      "problemMatcher": []
     }
   ]
 }
