--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "A Next.js application with Keycloak authentication",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.tests.json && next build",
-    "dev": "docker compose -f docker/docker-compose.yml up -d && node scripts/setup-keycloak.js && next dev --turbopack",
-    "setup:keycloak": "node scripts/setup-keycloak.js",
+    "build": "next build",
+    "dev": "docker compose -f docker/docker-compose.yml up -d && ts-node --project tsconfig.node.json scripts/setup-keycloak.ts && next dev --turbopack",
+    "setup:keycloak": "ts-node --project tsconfig.node.json scripts/setup-keycloak.ts",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
+    "format": "prettier --write --log-level warn \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
-    "test": "jest",
-    "test:ci": "jest --forceExit --detectOpenHandles",
+    "test": "npm run format && tsc --project tsconfig.tests.json && jest",
+    "test:ci": "npm run format && tsc --project tsconfig.tests.json && jest --forceExit --detectOpenHandles",
     "test:unit": "jest --selectProjects Unit",
     "test:components": "jest --selectProjects Components",
     "test:integration": "jest --selectProjects Integration",
     "test:system": "jest --selectProjects System",
-    "send-test-results": "node scripts/send-test-results.js",
-    "demo-data": "node scripts/generate-demo-data.js",
+    "send-test-results": "ts-node --project tsconfig.node.json scripts/send-test-results.ts",
+    "demo-data": "ts-node --project tsconfig.node.json scripts/generate-demo-data.ts",
     "generate-ctrf:types": "npx json2ts -i src/schemas/ctrf/ctrf-schema.json -o src/schemas/ctrf/ctrf.ts --inferStringEnumKeysFromValues --enableConstEnums",
     "prepare": "husky",
     "postinstall": "husky && npx playwright install chromium"
@@ -72,6 +72,7 @@
     "prettier": "^3.5.3",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "wait-on": "^8.0.3"
