--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scaledtest",
   "version": "1.0.0",
   "description": "A Next.js application with Keycloak authentication",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "tsc --project tsconfig.tests.json && next build",
@@ -9,8 +10,7 @@
     "setup:keycloak": "node scripts/setup-keycloak.js",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\" --log-level warn",
     "test": "jest",
     "test:ci": "jest --forceExit --detectOpenHandles",
     "test:unit": "jest --selectProjects Unit",
