--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "incremental": true /* Save .tsbuildinfo files to allow for incremental compilation of projects. */,
 
     /* Language and Environment */
-    "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "target": "ES2024" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "lib": [
       "dom",
       "dom.iterable",
@@ -15,7 +15,7 @@
     "jsx": "preserve" /* Specify what JSX code is generated. */,
 
     /* Modules */
-    "module": "esnext" /* Specify what module code is generated. */,
+    "module": "ESNext" /* Specify what module code is generated. */,
     "moduleResolution": "bundler" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
