Fixing playwright tests and converting more to typescript

--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\" --log-level warn",
-    "test": "jest",
-    "test:ci": "jest --forceExit --detectOpenHandles",
-    "test:unit": "jest --selectProjects Unit",
-    "test:components": "jest --selectProjects Components",
-    "test:integration": "jest --selectProjects Integration",
-    "test:system": "jest --selectProjects System",
+    "test": "jest --forceExit --detectOpenHandles",
     "send-test-results": "node scripts/send-test-results.js",
     "demo-data": "node scripts/generate-demo-data.js",
     "generate-ctrf:types": "npx json2ts -i src/schemas/ctrf/ctrf-schema.json -o src/schemas/ctrf/ctrf.ts --inferStringEnumKeysFromValues --enableConstEnums",
