--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@types/react-dom": "^19.1.5",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "get-port": "^7.1.0",
     "jose": "^6.0.11",
     "keycloak-js": "^26.2.0",
+    "kill-port": "^2.0.1",
     "next": "^15.3.3",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
@@ -43,6 +45,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/kill-port": "^2.0.3",
     "@types/node": "^22.15.29",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
