--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.tests.json && next build",
+    "build": "npm run format && npm run build:jest-reporter && tsc && next build",
+    "build:jest-reporter": "tsc -p tsconfig.jest-reporter.json && if exist dist\\jest\\logging\\enhancedCtrfReporter.js (move dist\\jest\\logging\\enhancedCtrfReporter.js dist\\jest\\enhancedCtrfReporter.cjs)",
     "dev": "docker compose -f docker/docker-compose.yml up -d && npx tsx scripts/setup-keycloak.ts && next dev --turbopack",
     "setup:keycloak": "npx tsx scripts/setup-keycloak.ts",
     "update-deps": "npx npm-check-updates -u && npm install",
@@ -22,13 +23,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
+    "@nivo/scatterplot": "^0.99.0",
     "@opensearch-project/opensearch": "^3.5.1",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.19.1",
     "jose": "^6.0.11",
     "keycloak-js": "^26.2.0",
+    "lucide-react": "^0.523.0",
     "next": "^15.3.3",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
