--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
 
     /* Emit */
-    "noEmit": true /* Disable emitting files from a compilation. */,
+    "noEmit": false /* Disable emitting files from a compilation. */,
+    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+    "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
 
     /* Interop Constraints */
     "isolatedModules": true /* Ensure that each file can be safely transpiled without relying on other imports. */,
@@ -42,5 +44,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
