feat: Update Jest CLI usage and ES module configuration
- Add specific test scripts for each project type (unit, components, integration, system)
- Update README.md with comprehensive Jest CLI documentation and usage patterns
- Correct Jest command examples to use proper CLI flags (--selectProjects, --testNamePattern, --testPathPattern)
- Remove invalid Jest environment variables (maxworkers, testmatch) from documentation
- Add copilot instructions rule against creating unnecessary summary documents
- Clean up obsolete tsconfig.jest-reporter.json file
- Enhance documentation with ES2024/ESM Jest configuration details
- Add advanced Jest CLI usage examples for filtering and debugging tests

--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npm run format && npm run build:jest-reporter && tsc && next build",
-    "build:jest-reporter": "tsc -p tsconfig.jest-reporter.json && if exist dist\\jest\\logging\\enhancedCtrfReporter.js (move dist\\jest\\logging\\enhancedCtrfReporter.js dist\\jest\\enhancedCtrfReporter.cjs)",
+    "build": "npm run format && tsc && next build",
     "dev": "docker compose -f docker/docker-compose.yml up -d && npx tsx scripts/setup-keycloak.ts && next dev --turbopack",
     "setup:keycloak": "npx tsx scripts/setup-keycloak.ts",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\" --log-level warn",
     "test": "jest --forceExit --detectOpenHandles",
+    "test:unit": "jest --selectProjects Unit --forceExit --detectOpenHandles",
+    "test:components": "jest --selectProjects Components --forceExit --detectOpenHandles",
+    "test:integration": "jest --selectProjects Integration --forceExit --detectOpenHandles",
+    "test:system": "jest --selectProjects System --forceExit --detectOpenHandles",
+    "test:ui": "jest --selectProjects System --forceExit --detectOpenHandles",
     "send-test-results": "npx tsx scripts/send-test-results.ts",
     "demo-data": "npx tsx scripts/generate-demo-data.ts",
     "generate-ctrf:types": "npx json2ts -i src/schemas/ctrf/ctrf-schema.json -o src/schemas/ctrf/ctrf.ts --inferStringEnumKeysFromValues --enableConstEnums",
