refactor: implement DRY principles and remove test:ui script
- Remove redundant test:ui script from package.json
- Create build-and-test.ts script with common Jest flags (--forceExit --detectOpenHandles)
- Update all test scripts to use the new build-and-test script
- Simplify package.json test scripts following DRY principles
- Update README.md to remove test:ui references
- Update GitHub Copilot instructions to prevent test:ui recreation
- Clarify that UI tests are part of system test suite
- Update system test setup comments to reflect build assumptions
- Ensure tests always build first and fail fast on build errors

--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\" --log-level warn",
-    "test": "jest --forceExit --detectOpenHandles",
-    "test:unit": "jest --selectProjects Unit --forceExit --detectOpenHandles",
-    "test:components": "jest --selectProjects Components --forceExit --detectOpenHandles",
-    "test:integration": "jest --selectProjects Integration --forceExit --detectOpenHandles",
-    "test:system": "jest --selectProjects System --forceExit --detectOpenHandles",
-    "test:ui": "jest --selectProjects System --forceExit --detectOpenHandles",
+    "test": "npx tsx scripts/build-and-test.ts",
+    "test:unit": "npx tsx scripts/build-and-test.ts --selectProjects Unit",
+    "test:components": "npx tsx scripts/build-and-test.ts --selectProjects Components",
+    "test:integration": "npx tsx scripts/build-and-test.ts --selectProjects Integration",
+    "test:system": "npx tsx scripts/build-and-test.ts --selectProjects System",
     "send-test-results": "npx tsx scripts/send-test-results.ts",
     "demo-data": "npx tsx scripts/generate-demo-data.ts",
     "generate-ctrf:types": "npx json2ts -i src/schemas/ctrf/ctrf-schema.json -o src/schemas/ctrf/ctrf.ts --inferStringEnumKeysFromValues --enableConstEnums",
