--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.tests.json && next build",
+    "build": "npm run format && tsc && next build",
     "dev": "docker compose -f docker/docker-compose.yml up -d && npx tsx scripts/setup-keycloak.ts && next dev --turbopack",
     "setup:keycloak": "npx tsx scripts/setup-keycloak.ts",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\" --log-level warn",
-    "test": "jest --forceExit --detectOpenHandles",
+    "test": "npx tsx scripts/build-and-test.ts",
+    "test:unit": "npx tsx scripts/build-and-test.ts --selectProjects Unit",
+    "test:components": "npx tsx scripts/build-and-test.ts --selectProjects Components",
+    "test:integration": "npx tsx scripts/build-and-test.ts --selectProjects Integration",
+    "test:system": "npx tsx scripts/build-and-test.ts --selectProjects System",
     "send-test-results": "npx tsx scripts/send-test-results.ts",
     "demo-data": "npx tsx scripts/generate-demo-data.ts",
     "generate-ctrf:types": "npx json2ts -i src/schemas/ctrf/ctrf-schema.json -o src/schemas/ctrf/ctrf.ts --inferStringEnumKeysFromValues --enableConstEnums",
@@ -22,15 +26,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
+    "@nivo/scatterplot": "^0.99.0",
     "@opensearch-project/opensearch": "^3.5.1",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.19.1",
     "get-port": "^7.1.0",
     "jose": "^6.0.11",
     "keycloak-js": "^26.2.0",
     "kill-port": "^2.0.1",
+    "lucide-react": "^0.523.0",
     "next": "^15.3.3",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
