--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ KEYCLOAK_ROLES=readonly,maintainer,owner
 
 # User Configuration - Readonly User
 KEYCLOAK_READONLY_USER_USERNAME=readonly@example.com
-KEYCLOAK_READONLY_USER_PASSWORD=password
+KEYCLOAK_READONLY_USER_PASSWORD=ReadOnly123!
 KEYCLOAK_READONLY_USER_FIRSTNAME=Read
 KEYCLOAK_READONLY_USER_LASTNAME=Only
 KEYCLOAK_READONLY_USER_EMAIL=readonly@example.com
@@ -45,7 +45,7 @@ KEYCLOAK_READONLY_USER_ROLES=readonly
 
 # User Configuration - Maintainer User
 KEYCLOAK_MAINTAINER_USER_USERNAME=maintainer@example.com
-KEYCLOAK_MAINTAINER_USER_PASSWORD=password
+KEYCLOAK_MAINTAINER_USER_PASSWORD=Maintainer123!
 KEYCLOAK_MAINTAINER_USER_FIRSTNAME=Maintainer
 KEYCLOAK_MAINTAINER_USER_LASTNAME=User
 KEYCLOAK_MAINTAINER_USER_EMAIL=maintainer@example.com
@@ -53,7 +53,7 @@ KEYCLOAK_MAINTAINER_USER_ROLES=readonly,maintainer
 
 # User Configuration - Owner User
 KEYCLOAK_OWNER_USER_USERNAME=owner@example.com
-KEYCLOAK_OWNER_USER_PASSWORD=password
+KEYCLOAK_OWNER_USER_PASSWORD=Owner123!
 KEYCLOAK_OWNER_USER_FIRSTNAME=Owner
 KEYCLOAK_OWNER_USER_LASTNAME=User
 KEYCLOAK_OWNER_USER_EMAIL=owner@example.com
@@ -82,7 +82,7 @@ NEXT_PUBLIC_API_URL=http://localhost:3000
 # Test user credentials for API authentication - OPTIONAL
 # Used by the send-test-results script to authenticate with the API
 TEST_API_USERNAME=maintainer@example.com
-TEST_API_PASSWORD=password
+TEST_API_PASSWORD=Maintainer123!
 
 # CTRF Report Configuration - OPTIONAL
 # Set to 'true' to automatically clean up the CTRF report file after sending
