feat: add eslint-plugin-unused-imports to catch and auto-fix unused imports
- Install eslint-plugin-unused-imports package
- Configure ESLint to detect unused imports and variables
- Add lint:fix and lint:fix-imports scripts for automatic cleanup
- Update build script to include linting step to fail builds on unused imports
- Support automatic removal of unused imports with --fix flag

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npm run format && tsc && next build",
+    "build": "npm run format && npm run lint && tsc && next build",
     "dev": "docker compose -f docker/docker-compose.yml up -d && next dev --turbopack",
     "setup:test-users": "npx tsx scripts/setup-test-users.ts",
     "update-deps": "npx npm-check-updates -u && npm install",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:fix-imports": "npm run lint:fix && npm run format",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\" --log-level warn",
     "test": "npx tsx scripts/build-and-test.ts",
     "test:unit": "npx tsx scripts/build-and-test.ts --selectProjects Unit",
@@ -73,6 +75,7 @@
     "eslint-config-next": "^15.3.3",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
