fix: correct CI database configuration and increase timeout
Critical fixes for CI failures:

1. Database Configuration Fix:
   - CI was pointing to 'scaledtest' database for Better Auth
   - Changed to 'auth' database to match local environment
   - This caused registration tests to fail in CI but pass locally

2. Timeout Increase:
   - Increased CI timeout from 5 to 10 minutes
   - Comprehensive test suite needs more time in CI environment
   - Includes Docker setup, database init, and Playwright tests

Root Cause Analysis:
- Local tests use 'auth' database for Better Auth (correct)
- CI was using 'scaledtest' database for Better Auth (incorrect)
- This database mismatch caused authentication failures in CI only

--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -26,7 +26,7 @@ jobs:
       NEXT_PUBLIC_BASE_URL: http://localhost:3000
 
       # Database configuration
-      DATABASE_URL: postgresql://scaledtest:password@localhost:5432/scaledtest
+      DATABASE_URL: postgresql://scaledtest:password@localhost:5432/auth
 
       # Test users
       TEST_API_USERNAME: maintainer@example.com
