--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsx scripts/build.ts",
-    "dev": "docker compose -f docker/docker-compose.yml up -d && next dev --turbopack",
-    "start": "next start",
+    "dev": "npm run pm2:dev",
+    "start": "npm run migrate && next start",
+    "migrate": "npx @better-auth/cli migrate --yes && npx node-pg-migrate up --migrations-dir migrations/scaledtest",
     "update-deps": "npx npm-check-updates -u && npm install",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md,yml,yaml,html}\" --log-level warn",
+    "lint": "eslint .",
     "test": "npx tsx scripts/build-and-test.ts",
     "test:unit": "npx tsx scripts/build-and-test.ts --selectProjects Unit",
     "test:components": "npx tsx scripts/build-and-test.ts --selectProjects Components",
@@ -77,6 +79,8 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.34.0",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
@@ -100,6 +104,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.1.3",
