Fix: Disable email verification for test environment
- Add REQUIRE_EMAIL_VERIFICATION=false to .env for development/testing
- Resolves authentication failures in tests due to unverified email requirement
- Makes auth configuration environment-aware as requested in Copilot review

--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ BETTER_AUTH_SECRET=complex-secret-at-least-32-characters-long-for-production-use
 BETTER_AUTH_URL=http://localhost:3000
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
+# Email Verification Configuration
+# Set to 'false' in development/test environments to skip email verification
+REQUIRE_EMAIL_VERIFICATION=false
+
 # Authentication Database Configuration (auth database in same PostgreSQL instance)
 DATABASE_URL=postgresql://scaledtest:password@127.0.0.1:5432/auth
 
