--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "prepare": "husky",
     "postinstall": "husky && npx playwright install chromium",
     "kill": "kill-port 3000",
-    "pm2:dev": "node scripts/start-dev-server.js start",
-    "pm2:stop": "node scripts/start-dev-server.js stop",
-    "pm2:delete": "node scripts/start-dev-server.js delete",
+    "pm2:dev": "npx tsx scripts/manage-pm2-server.ts start",
+    "pm2:start": "npx tsx scripts/manage-pm2-server.ts start",
+    "pm2:stop": "npx tsx scripts/manage-pm2-server.ts stop",
+    "pm2:clean": "npx tsx scripts/manage-pm2-server.ts clean",
+    "pm2:delete": "npx tsx scripts/manage-pm2-server.ts delete",
     "pm2:status": "npx pm2 status",
     "pm2:update": "npx pm2 update",
-    "pm2:logs": "node scripts/start-dev-server.js logs",
-    "pm2:restart": "node scripts/start-dev-server.js restart"
+    "pm2:logs": "npx tsx scripts/manage-pm2-server.ts logs",
+    "pm2:restart": "npx tsx scripts/manage-pm2-server.ts restart"
   },
   "keywords": [],
   "author": "",
@@ -70,7 +72,6 @@
     "next": "^15.5.3",
     "pg": "^8.16.3",
     "pino": "^9.9.0",
-    "pino-pretty": "^13.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
@@ -114,6 +115,7 @@
     "json-schema-to-typescript": "^15.0.4",
     "lint-staged": "^16.1.6",
     "node-pg-migrate": "^8.0.3",
+    "pino-pretty": "^13.1.1",
     "playwright": "^1.55.0",
     "pm2": "^6.0.10",
     "postcss": "^8.5.6",
