--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ BETTER_AUTH_SECRET=complex-secret-at-least-32-characters-long-for-production-use
 BETTER_AUTH_URL=http://localhost:3000
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Email Verification Configuration
-# Set to 'false' in development/test environments to skip email verification
-REQUIRE_EMAIL_VERIFICATION=false
+# Development Configuration
+# Disable development overlays to prevent interference with testing
+NODE_ENV=development
 
 # Authentication Database Configuration (auth database in same PostgreSQL instance)
 DATABASE_URL=postgresql://scaledtest:password@127.0.0.1:5432/auth
@@ -16,7 +16,7 @@ TIMESCALE_DATABASE_URL=postgresql://scaledtest:password@127.0.0.1:5432/scaledtes
 # TimescaleDB Configuration
 TIMESCALEDB_HOST=127.0.0.1
 TIMESCALEDB_PORT=5432
-TIMESCALEDB_DATABASE=scaledtest
+TIMESCALEDB_DATABASE=auth
 TIMESCALEDB_USERNAME=scaledtest
 TIMESCALEDB_PASSWORD=password
 
